--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "name": "item-manager",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "start": "nodemon main.js"
+  },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.19.2"
   }
 }
