--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "scripts": {
+    "start": "nodemon main.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.12.0"
   }
